<?xml version="1.0"?>
<package format="2">
  <name>schunk_fts_ros1</name>
  <version>1.0.0</version>
  <description>ROS 1 Noetic driver wrapper for SCHUNK Force-Torque Sensors</description>

  <maintainer email="elektron97@todo.todo">elektron97</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
  </export>
</package>